# CaptureEngine

./: CMakeLists.txt  ClearBuild.bat  README.md
Engine/Source/Include/Capture/: Error.h  Typedefs.h
Engine/Source/Runtime/: CMakeLists.txt
Engine/Source/Runtime/Driver/: RenderDriver.cpp  RenderDriver.h
Engine/Source/Runtime/Window/: Window.cpp  Window.h
Engine/Source/Sandbox/: CMakeLists.txt  CaptureEngine.cpp
drivers/: render_device.cpp  render_device.h
engine/: window.h
include/capture/: error.h  typedefs.h
main/: main.cpp  main.h
runtime/window/: window.cpp  window.h
surface/: window.cpp  window.h
